--- a/.github/workflows/sync-config.yml
+++ b/.github/workflows/sync-config.yml
@@ -89,7 +89,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ env.CONFIG_REPO }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT }}
           fetch-depth: 0
           path: config-repo
 
