live-laptop: be gone!

--- a/inventories/ha_target_local.ini
+++ b/inventories/ha_target_local.ini
@@ -1,5 +1,5 @@
 [ha_target]
-live-laptop ansible_connection=local ansible_user=ubuntu ansible_python_interpreter=/usr/bin/python3
+self-hosted ansible_connection=local ansible_user=ubuntu ansible_python_interpreter=/usr/bin/python3
 
 [ha]
 # Not used in local deployment
