Argon One M.2 dependency added for hotter days

--- a/roles/homeassistant/tasks/argon-fan.yml
+++ b/roles/homeassistant/tasks/argon-fan.yml
@@ -2,19 +2,33 @@
 # Argon One Case Fan Configuration
 # Installs and configures the Argon One fan daemon for Raspberry Pi
 #
-# Only runs when enable_argon_fan: true
+# Only runs when:
+#   - enable_argon_fan: true
+#   - Architecture is ARM (Raspberry Pi)
+
+- name: Check if running on Raspberry Pi (ARM)
+  ansible.builtin.set_fact:
+    is_raspberry_pi: "{{ ansible_architecture in ['aarch64', 'armv7l', 'armv6l'] }}"
+
+- name: Skip Argon setup on non-Pi hardware
+  ansible.builtin.debug:
+    msg: "Skipping Argon One setup - not a Raspberry Pi (arch: {{ ansible_architecture }})"
+  when: not is_raspberry_pi
 
 - name: Check if argononed is already installed
   ansible.builtin.stat:
     path: /usr/bin/argon-config
   register: argon_installed
+  when: is_raspberry_pi
 
 - name: Install Argon One daemon
   ansible.builtin.shell: |
     curl -sSL https://download.argon40.com/argon1.sh | bash
   args:
     creates: /usr/bin/argon-config
-  when: not argon_installed.stat.exists
+  when:
+    - is_raspberry_pi
+    - not argon_installed.stat.exists
   become: true
 
 - name: Configure Argon fan curve
@@ -30,6 +44,7 @@
       {{ argon_fan_curve | default(argon_fan_curve_default) }}
   become: true
   notify: Restart argononed
+  when: is_raspberry_pi
 
 - name: Ensure argononed service is enabled and running
   ansible.builtin.systemd:
@@ -37,3 +52,4 @@
     enabled: true
     state: started
   become: true
+  when: is_raspberry_pi
