Database included in de seedbox restore

--- a/roles/homeassistant/tasks/seedbox-restore.yml
+++ b/roles/homeassistant/tasks/seedbox-restore.yml
@@ -110,6 +110,11 @@
         seedbox_storage_path: "{{ seedbox_storage_search.stdout }}"
       when: seedbox_found
 
+    - name: Derive config path from storage path
+      ansible.builtin.set_fact:
+        seedbox_config_path: "{{ seedbox_storage_path | dirname }}"
+      when: seedbox_found
+
     - name: Stop HA container before .storage sync
       ansible.builtin.shell: |
         sg docker -c 'docker stop {{ ha_container_name }}'
@@ -125,7 +130,7 @@
         mode: '0755'
       when: seedbox_found
 
-    - name: ACTUAL SYNC - Transfer data from Seedbox to Target
+    - name: ACTUAL SYNC - Transfer .storage from Seedbox to Target
       ansible.builtin.shell: |
         set -e
         # 1. Pak in op Seedbox -> 2. Pipe door laptop -> 3. Pak uit op Target Server
@@ -136,6 +141,19 @@
       delegate_to: localhost
       changed_when: true
       when: seedbox_found
+
+    - name: ACTUAL SYNC - Transfer database from Seedbox to Target
+      ansible.builtin.shell: |
+        set -e
+        # Transfer HA database (contains historical data, statistics)
+        ssh -o StrictHostKeyChecking=no {{ seedbox_user }}@{{ seedbox_ip }} \
+          "tar -czf - -C {{ seedbox_config_path }} home-assistant_v2.db 2>/dev/null || true" | \
+        ssh -o StrictHostKeyChecking=no {{ ansible_user }}@{{ ansible_host }} \
+          "tar -xzf - -C {{ ha_config_dir }}/ 2>/dev/null || true"
+      delegate_to: localhost
+      changed_when: true
+      when: seedbox_found
+      ignore_errors: true  # Database might not exist on all seedboxes
 
     - name: Surgical cleanup via local Python script
       ansible.builtin.script: "clean_ha.py {{ ha_config_dir }}"
@@ -176,13 +194,19 @@
       changed_when: true
       when: seedbox_found
 
+    - name: Check if database was restored
+      ansible.builtin.stat:
+        path: "{{ ha_config_dir }}/home-assistant_v2.db"
+      register: db_stat
+      when: seedbox_found
+
     - name: Seedbox restore summary
       ansible.builtin.debug:
         msg:
-          - "✅ .storage restored from seedbox!"
+          - "✅ Seedbox restore completed!"
           - "Seedbox: {{ seedbox_user }}@{{ seedbox_ip }}"
-          - "Path: {{ seedbox_storage_path }}"
-          - "Target: {{ ha_config_dir }}/.storage/"
+          - ".storage: {{ seedbox_storage_path }} → {{ ha_config_dir }}/.storage/"
+          - "Database: {{ 'Restored (' + (db_stat.stat.size | filesizeformat) + ')' if db_stat.stat.exists else 'Not found on seedbox' }}"
       when: seedbox_found
 
   always:
